[package]
name = "whalepod"
version = "0.1.0"
authors = ["Gabriel Simmer <gabriel@gitgalaxy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
regex = "1"